@@ -1,7 +1,7 @@
 #! /usr/bin/guile -s
 !#
 ;; guile-gnome
-;; Copyright (C) 2004 Free Software Foundation, Inc.
+;; Copyright (C) 2004-2005 Free Software Foundation, Inc.
 
 ;; This program is free software; you can redistribute it and/or    
 ;; modify it under the terms of the GNU General Public License as   
@@ -24,42 +24,45 @@
 (debug-enable 'backtrace)
 
 (use-modules (srfi srfi-8)
-	     (gnome gtk))
-
-(define FIFO (tmpnam))
+	     (gnome glib))
 
 (define (stderr string . rest)
   (apply format (current-error-port) string rest)
   (force-output (current-error-port)))
 
-(define (stderr string . rest)
-  (apply format (cons (current-error-port) (cons string rest)))
-  (force-output (current-error-port)))
-
-(define (fifo-callback source condition)
-  (stderr "FIFO\n")
+(define (fifo-callback loop source condition)
+  (stderr "fifo\n")
   (receive (status line len term) (g-io-channel-read-line source)
     (stderr "result: ~S\n" line)
     (if (equal? line "exit\n")
-	(gtk-main-quit)))
+        (g-main-loop-quit loop)))
   #t)
 
-(define (talk)
+(define (talk fifo-name)
   (sleep 1)
-  (let ((fifo (open-file FIFO "w")))
+  (let ((fifo (open-file fifo-name "w")))
     (display "Do you read me?\n" fifo)
-    (system (string-append "echo Do you read me>" FIFO))
+    (system (string-append "echo Do you read me>" fifo-name))
     (sleep 2)
     (display "exit\n" fifo)
-    (system (string-append "echo exit >" FIFO))))
-	 
+    (system (string-append "echo exit >" fifo-name))))
+
 (define (main)
-  (mknod FIFO 'fifo #o600 0)
-  (if (= 0 (primitive-fork))
-      (talk))
-  (g-io-add-watch (g-io-channel-new-file FIFO) 'in fifo-callback)
-  (gtk-main)
-  (delete-file FIFO))
+  (let ((fifo (tmpnam))
+        (loop (g-main-loop-new)))
+    
+    (mknod fifo 'fifo #o600 0)
+    (if (= 0 (primitive-fork))
+        (begin
+          (talk fifo)
+          (exit 0)))
+    
+    (g-io-add-watch
+     (g-io-channel-new-file fifo) 'in
+     (lambda (source condition) (fifo-callback loop source condition)))
+    
+    (g-main-loop-run loop)
+    (delete-file fifo)))
 
 (main)
 
